# mockexchange-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  stop_mockexchange.sh
examples/dry_run/: README.md  continue_dryrun.sh  log_dryrun.sh  reset_start_dryrun.sh  start_dryrun.sh
scripts/: cli.py  server.py
src/mockexchange/: __init__.py  _types.py  constants.py  engine.py  engine.py.bkp  engine_actors.py  logging_config.py  market.py  orderbook.py  portfolio.py  server.py
src/mockexchange_api/: cli.py  server.py  server.py.bkp
src/tests/: conftest.py  helpers.py  test_00_normal_example.py  test_01_reset.py  test_01_reset_and_edit_balance.py  test_02_deposit_withdrawal.py  test_02_funding.py  test_03_market_orders.py  test_03_market_orders_concurrent.py  test_03_market_orders_property.py  test_04_limit_orders.py  test_04_limit_orders_property.py  test_05_cancel_limit_orders.py  test_06A_fund_and_cancel_insufficient_trade_when_buy.py  test_06A_fund_and_full_rejected_insufficient_trade_when_buy.py  test_06B_fund_and_cancel_insufficient_trade_when_sell.py  test_06B_fund_and_partial_rejected_insufficient_trade_when_buy.py  test_06C_fund_and_cancel_insufficient_fee_when_sell.py  test_06C_fund_and_rejected_insufficient_trade_when_sell.py  test_06D_fund_and_rejected_insufficient_fee_when_sell.py  test_06_fund_and_full_rejected_insufficient_trade_when_buy.py  test_07_fund_and_partial_rejected_insufficient_trade_when_buy.py  test_08_fund_and_rejected_insufficient_trade_when_sell.py  test_09_fund_and_rejected_insufficient_fee_when_sell.py  test_api.py  (+1 more)
(+10 files in other folders)
